--- a/cv/templates/work_with_us/create.html
+++ b/cv/templates/work_with_us/create.html
@@ -12,28 +12,34 @@
                 <p class="mb-6">Estamos sempre em busca de talentos para nossa equipe. Envie seu currículo e faça parte
                     de uma empresa que valoriza seus colaboradores.</p>
 
-                <form class="space-y-4">
+                <form method="POST" action="{% url 'form_work_with_us' %}" enctype="multipart/form-data" class="space-y-4">
+                    {% csrf_token %}                    
                     <div>
                         <label for="nome" class="block text-sm font-medium text-gray-700">Nome Completo</label>
                         <input type="text" id="nome"
+                            name="name"
                             class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500">
                     </div>
 
                     <div>
                         <label for="email" class="block text-sm font-mmedium text-gray-700">E-mail</label>
                         <input type="email" id="email"
+                            name="email"
                             class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500">
                     </div>
 
                     <div>
                         <label for="telefone" class="block text-sm font-medium text-gray-700">Telefone</label>
                         <input type="tel" id="telefone"
+                            name="phone"
                             class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500">
                     </div>
 
                     <div>
                         <label for="curriculo" class="block text-sm font-medium text-gray-700">Currículo (PDF)</label>
                         <input type="file" id="curriculo"
+                            name="file"
+                            accept=".pdf, .doc, .docx"
                             class="mt-1 block w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-md file:border-0 file:text-sm file:font-semibold file:bg-indigo-50 file:text-indigo-700 hover:file:bg-indigo-100">
                     </div>
 
