--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,22 @@
+{% load static %}
 {% load static tailwind_tags %}
-<DOCTYPE>
+<html>
     <html lang="en">
 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <script type="module" src="{% static 'js/global.js' %}" defer></script>
         {% tailwind_css %}
         <title>Document</title>
     </head>
-
-    <body>
-        <div>
-            {% block content %}
-            {% endblock %}
-        </div>
-    </body>
-
+        <body>
+            <div>
+                {% block content %}
+                {% endblock %}
+            </div>
+            {% include 'components/_toast.html' %}
+        </body>
     </html>
-</DOCTYPE>
+</html>
